# estructuras

./: .gitignore  CMakeLists.txt
Arrays/: ArrayList.cpp  ArrayList.h  CMakeLists.txt  Persona.cpp  Persona.h  main.cpp
EjercicioQueue/: CMakeLists.txt  Queue.cpp  Queue.h  main.cpp
EjercicioSet/: CMakeLists.txt  Set.cpp  Set.h  main.cpp
Hashing/: ArrayList.cpp  ArrayList.h  CMakeLists.txt  HashMap.cpp  HashMap.h  HashSet.cpp  HashSet.h  Persona.cpp  Persona.h
LinkedLists/AppendableListsRecorribles/: AppendableListsRecorribles.cpp  AppendableListsRecorribles.h  TestingLists.cpp  TestingLists.h  main.cpp
LinkedLists/DestructiveLinkedLists/: CMakeLists.txt  DestructiveLinkedLists.cpp  DestructiveLinkedLists.h  TestingLists.cpp  TestingLists.h  main.cpp
LinkedLists/FunctionalLinkedLists/: CMakeLists.txt  FunctionalLinkedLists.cpp  FunctionalLinkedLists.h  TestingLists.h
LinkedLists/LinkedListsRecorribles/: LinkedListsRecorribles.cpp  LinkedListsRecorribles.h  TestingLists.cpp  TestingLists.h  main.cpp
LinkedLists/Prelude/: Prelude.cpp  Prelude.h
LinkedLists/SimpleLinkedLists/: SimpleLinkedLists.cpp  SimpleLinkedLists.h  TestingLists.cpp  TestingLists.h  main.cpp
LinkedLists/otros/: Pairs.c  Pairs.h  Queue.c  Queue.h  Stack.c  Stack.h  TestingPairs.c  TestingPairs.h  TestingQueues.c  TestingStacks.c  TestingStacks.h  main.c
List/LinkedList/: CMakeLists.txt  linked_list.cpp  linked_list.h  main.cpp
Practica/: CMakeLists.txt  Fraccion.cpp  Fraccion.h  Pokemon.cpp  Pokemon.h  UsuarioFunctionalLists.cppm  main.cpp
Tree/: Tree.cpp  Tree.h  main.cpp
(+31 files in other folders)
