cmake_minimum_required(VERSION 3.10)
project(estructuras)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(Arrays)
add_subdirectory(Hashing)
add_subdirectory(LinkedLists/FunctionalLinkedLists)
add_subdirectory(LinkedLists/DestructiveLinkedLists)
add_subdirectory(List/LinkedList)
add_subdirectory(Practica)
add_subdirectory(Queues/QueueConHeader)
